--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
             <div class="headline"><h3>Sản phẩm bán chạy</h3></div>
 
             <ul class="products" id="products">
-                <!-- <li>
+                <!--    innerHTML here: products * perPage
+                <li>
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
@@ -179,126 +180,8 @@
                             <div class="product-price">200.000 ₫</div>
                         </div>
                     </div>
-                </li> 
-
-                 <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
                 </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <a href="" class="product-thumb">
-                                <img src="assets/images/product/Sach/KinhTe/ChungKhoan/product-tst.jpg" alt="">
-                            </a>
-                            <a href="" class="buynow">Mua Ngay</a>
-                        </div>
-
-                        <div class="product-info">
-                            <a href="" class="product-cat">Sách Kinh Tế</a>
-                            <a href="" class="product-name">Chết vì chứng khoán</a>
-                            <div class="product-price">200.000 ₫</div>
-                        </div>
-                    </div>
-                </li> -->
+                        innerHTML here: products * perPage  -->
             </ul>
             <div class="content-paging">
                 <ul class="page">
@@ -418,7 +301,7 @@
             <i class="fa-solid fa-xmark" onclick="backFromDiv()"></i>
         </div>
         <div id="detail">
-            <img src="/assets/images/product/product-2.jpg" alt="">
+            <img src="/assets/images/product/Sach/VanHoc/TruyenDai/product-2.jpg" alt="">
             <div id="detail-pro">
                 <ul>
                     <li><h2>Toi thay hoa vang tren co xanh</h2></li>
