update admin + renderProducts
up này lên main luôn na

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Smart Book</title>
+    <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="assets/icons/all.css">
@@ -18,111 +19,112 @@
         window.onload = function() {
             createAdmin();
             initBanner();
-            // renderProduct();
-            paging();
+            renderBestseller();
+            createBook();
+            loadPage();
         }
     </script>
     <div>
         <div id="header">
             <div id="logo">
-               <a href=""><img src="assets/images/logo.png" alt="Smart Book Logo"></a> 
+               <a href="index.html"><img src="assets/images/logo.png" alt="Smart Book Logo"></a> 
             </div>
 
             <ul id="topmenu">
                 <li class="parent-menu">
-                    <a href="/"><div>Trang Chủ</div></a>
+                    <a href="index.html"><div>Trang Chủ</div></a>
                 </li>
 
                 <li class="parent-menu">
-                    <a href="" title="Sách"><div>Sách <i class="fas fa-solid fa-caret-down"></i></div></a>
+                    <a href="index.html" title="Sách"><div>Sách <i class="fas fa-solid fa-caret-down"></i></div></a>
                     <ul class="sub-topmenu">
                         <li>
-                            <a href="">Giáo dục <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Giáo dục <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook1">
-                                <li><a href="">Sách giáo khoa</a></li>
-                                <li><a href="">Sách tham khảo</a></li>
-                                <li><a href="">Từ điển</a></li>
+                                <li><a href="/index.html?giaoduc&sachgiaokhoa">Sách giáo khoa</a></li>
+                                <li><a href="/index.html?giaoduc&sachthamkhao">Sách tham khảo</a></li>
+                                <li><a href="/index.html?giaoduc&tudien">Từ điển</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Văn học <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Văn học <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook2">
-                                <li><a href="">Truyện ngắn</a></li>
-                                <li><a href="">Truyện dài</a></li>
-                                <li><a href="">Thơ</a></li>
-                                <li><a href="">Khác</a></li>
+                                <li><a href="/index.html?vanhoc&truyenngan">Truyện ngắn</a></li>
+                                <li><a href="/index.html?vanhoc&truyendai">Truyện dài</a></li>
+                                <li><a href="/index.html?vanhoc&tho">Thơ</a></li>
+                                <li><a href="/index.html?vanhoc&khac">Khác</a></li>
                             </ul>
                         </li>
                         <li><a href="">Tiểu thuyết</a></li>
                         <li>
-                            <a href="">Kinh tế <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Kinh tế <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook4">
-                                <li><a href="">Quản trị</a></li>
-                                <li><a href="">Marketing</a></li>
-                                <li><a href="">Nhân Vật</a></li>
-                                <li><a href="">Khởi nghiệp</a></li>
-                                <li><a href="">Chứng khoán</a></li>
+                                <li><a href="/index.html?kinhte&quantri">Quản trị</a></li>
+                                <li><a href="/index.html?kinhte&marketing">Marketing</a></li>
+                                <li><a href="/index.html?kinhte&nhanvat">Nhân Vật</a></li>
+                                <li><a href="/index.html?kinhte&khoinghiep">Khởi nghiệp</a></li>
+                                <li><a href="/index.html?kinhte&chungkhoan">Chứng khoán</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Tâm lý/Kỹ năng sống <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Tâm lý/Kỹ năng sống <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook5">
-                                <li><a href="">Tâm lý</a></li>
-                                <li><a href="">Kỹ năng sống</a></li>
-                                <li><a href="">Hạt giống tâm hồn</a></li>
+                                <li><a href="/index.html?tamly/kynangsong&tamly">Tâm lý</a></li>
+                                <li><a href="/index.html?tamly/kynangsong&kynangsong">Kỹ năng sống</a></li>
+                                <li><a href="/index.html?tamly/kynangsong&hatgiongtamhon">Hạt giống tâm hồn</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Lịch sử <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Lịch sử <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook6">
-                                <li><a href="">Việt Nam</a></li>
-                                <li><a href="">Nước ngoài</a></li>
+                                <li><a href="/index.html?lichsu&vietnam">Việt Nam</a></li>
+                                <li><a href="/index.html?lichsu&nuocngoai">Nước ngoài</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Thiếu nhi <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Thiếu nhi <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook7">
-                                <li><a href="">Truyện thiếu nhi</a></li>
-                                <li><a href="">Tô màu</a></li>
-                                <li><a href="">Luyện chữ</a></li>
+                                <li><a href="/index.html?thieunhi&truyenthieunhi">Truyện thiếu nhi</a></li>
+                                <li><a href="/index.html?thieunhi&tomau">Tô màu</a></li>
+                                <li><a href="/index.html?thieunhi&luyenchu">Luyện chữ</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
 
                 <li class="parent-menu">
-                    <a href="" title="Dụng Cụ"><div>Dụng Cụ <i class="fas fa-solid fa-caret-down"></i></div></a>
+                    <a href="index.html" title="Dụng Cụ"><div>Dụng Cụ <i class="fas fa-solid fa-caret-down"></i></div></a>
                     <ul class="sub-topmenu">
                         <li>
-                            <a href="">Dụng cụ học sinh <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Dụng cụ học sinh <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenudevice1">
-                                <li><a href="">Bút viết</a></li>
-                                <li><a href="">Tẩy</a></li>
-                                <li><a href="">Thước kẻ</a></li>
-                                <li><a href="">Máy tính cầm tay</a></li>
+                                <li><a href="/index.html?dungcuhocsinh&butviet">Bút viết</a></li>
+                                <li><a href="/index.html?dungcuhocsinh&tay">Tẩy</a></li>
+                                <li><a href="/index.html?dungcuhocsinh&thuocke">Thước kẻ</a></li>
+                                <li><a href="/index.html?dungcuhocsinh&maytinhcamtay">Máy tính cầm tay</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Dụng cụ văn phòng <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Dụng cụ văn phòng <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenudevice2">
-                                <li><a href="">Sổ tay/Ghi chú</a></li>
-                                <li><a href="">Túi/Bìa đụng hồ sơ</a></li>
-                                <li><a href="">Cắt/Dán</a></li>
-                                <li><a href="">Khác</a></li>
+                                <li><a href="/index.html?dungcuvanphong&sotay/ghichu">Sổ tay/Ghi chú</a></li>
+                                <li><a href="/index.html?dungcuvanphong&tui/biadung">Túi/Bìa đụng hồ sơ</a></li>
+                                <li><a href="/index.html?dungcuvanphong&cat/dan">Cắt/Dán</a></li>
+                                <li><a href="/index.html?dungcuvanphong&khac">Khác</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="">Dụng cụ vẽ <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html">Dụng cụ vẽ <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenudevice3">
-                                <li><a href="">Bảng vẽ</a></li>
-                                <li><a href="">Bút vẽ</a></li>
-                                <li><a href="">Bút màu</a></li>
-                                <li><a href="">Màu nước</a></li>
-                                <li><a href="">Cọ vẽ</a></li>
-                                <li><a href="">Khác</a></li>
+                                <li><a href="/index.html?dungcuve&bangve">Bảng vẽ</a></li>
+                                <li><a href="/index.html?dungcuve&butve">Bút vẽ</a></li>
+                                <li><a href="/index.html?dungcuve&butmau">Bút màu</a></li>
+                                <li><a href="/index.html?dungcuve&maunuoc">Màu nước</a></li>
+                                <li><a href="/index.html?dungcuve&cove">Cọ vẽ</a></li>
+                                <li><a href="/index.html?dungcuve&khac">Khác</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Khác</a></li>
+                        <li><a href="/index.html?dungcukhac">Khác</a></li>
                     </ul>
                 </li>
 
@@ -138,20 +140,41 @@
             <div id="search">
                 <form action="">
                     <i class="fas fa-solid fa-magnifying-glass"></i>&nbsp;
-                    <input type="search" size="20%" placeholder="Tìm kiếm">
+                    <input type="text" size="20%" placeholder="Tìm kiếm">
                 </form>
             </div>
 
             <div id="user">
                 <p id="username">
-                    
+                    <script>
+                        var user = JSON.parse(localStorage.getItem('userActive'));
+                        document.getElementById("username").innerText=user.name;
+                    </script>
                 </p>&nbsp;
+                <a href="admin.html"><i class="fas fa-duotone fa-gear" id="admin" title="Quản lý"></i>&nbsp;</a>
                 <i class="fas fa-solid fa-cart-shopping" title="Giỏ hàng"></i>&nbsp;
                 <i class="fas fa-solid fa-bell" title="Thông báo"></i>&nbsp;
-                <i class="fas fa-solid fa-right-to-bracket" id="icon-login" title="Đăng nhập" onclick="showLogin()"></i>
+                <i class="fas fa-solid fa-user" id="icon-login" title="Đăng nhập" onclick="showLogin()"></i>
+                <i class="fas fa-solid fa-right-from-bracket" id="icon-logout" title="Đăng xuất" onclick="logout()"></i>
             </div>
         </div>
-
+        <script>
+            var user = JSON.parse(localStorage.getItem('userActive'));
+            if(user==null){
+                document.getElementById("icon-login").style.display="inline";
+                document.getElementById("icon-logout").style.display="none";
+                document.getElementById("admin").style.display="none";
+            }else{
+                if(user.type=="Admin"){
+                    document.getElementById("admin").style.display="inline";
+                }else{
+                    document.getElementById("admin").style.display="none";
+                }
+                document.getElementById("icon-login").style.display="none";
+                document.getElementById("icon-logout").style.display="inline";
+                
+            }
+        </script>
         <div id="banner">
             <div id="previous-banner">
                 <i class="fas fa-regular fa-angle-left" title="Ảnh trước" onclick="prevBanner()"></i>
@@ -161,8 +184,7 @@
             </div>
         </div>
         <div id="content">
-            <div class="headline"><h3>Sản phẩm bán chạy</h3></div>
-
+            <div class="headline" id="headline"></div>
             <ul class="products" id="products">
                 <!--    innerHTML here: products * perPage
                 <li>
@@ -184,14 +206,14 @@
                         innerHTML here: products * perPage  -->
             </ul>
             <div class="content-paging">
-                <ul class="page">
-                    <li id="btprev" class="button-prev-next"><i class="fas fa-chevron-circle-left" onclick="prevButton()"></i></li>
+                <ul class="page" id="page">
+                    <!-- <li id="btprev" class="button-prev-next"><i class="fas fa-chevron-circle-left" onclick="prevButton()"></i></li>
                     <div class="number-page" id="number-page">
-                        <!-- <li id="active"><b>1</b></li>
+                        <li id="active"><b>1</b></li>
                         <li><b>2</b></li>
-                        <li><b>3</b></li> -->
+                        <li><b>3</b></li>
                     </div>
-                    <li id="btnext" class="button-prev-next-active"><i class="fas fa-chevron-circle-right" onclick="nextPage()"></i></li>
+                    <li id="btnext" class="button-prev-next-active"><i class="fas fa-chevron-circle-right" onclick="nextButton()"></i></li> -->
                 </ul>
             </div>
         </div>
@@ -233,7 +255,7 @@
         </div>
 
         <div title="Về đầu trang" id="backtotop">
-            <a href="#"><i class="fas fa-arrow-circle-up"></i></a>
+            <i class="fas fa-arrow-circle-up" onclick="backtop()"></i>
         </div>
     </div>
     <div id="container" onclick="backFromLogin()">
@@ -316,10 +338,10 @@
                         <h3>Số lượng:</h3>
                         <input style="margin-left: 30px;" type="button" name="" id="sub" value="-" onclick="sub()">
                         <input type="text" name="" id="quantity" value="1" onchange="check()">
-                        <input type="button" value="+" id="add" onclick="add()">
+                        <input type="button" value="+" id="plus" onclick="plus()">
                     </li>
                     <li id="addtocart">
-                        <div>Thêm Vào giỏ hàng</div>
+                        <div><i class="fas fa-solid fa-cart-shopping" title="Giỏ hàng"></i></div>
                     </li>
                 </ul>
             </div> -->
