--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="index.html" title="Sách"><div>Sách <i class="fas fa-solid fa-caret-down"></i></div></a>
                     <ul class="sub-topmenu">
                         <li>
-                            <a href="/index.html">Giáo dục <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html?giaoduc">Giáo dục <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook1">
                                 <li><a href="/index.html?giaoduc&sachgiaokhoa">Sách giáo khoa</a></li>
                                 <li><a href="/index.html?giaoduc&sachthamkhao">Sách tham khảo</a></li>
@@ -48,7 +48,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/index.html">Văn học <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html?vanhoc">Văn học <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook2">
                                 <li><a href="/index.html?vanhoc&truyenngan">Truyện ngắn</a></li>
                                 <li><a href="/index.html?vanhoc&truyendai">Truyện dài</a></li>
@@ -56,9 +56,9 @@
                                 <li><a href="/index.html?vanhoc&khac">Khác</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Tiểu thuyết</a></li>
+                        <li><a href="/index.html?tieuthuyet">Tiểu thuyết</a></li>
                         <li>
-                            <a href="/index.html">Kinh tế <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html?kinhte">Kinh tế <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook4">
                                 <li><a href="/index.html?kinhte&quantri">Quản trị</a></li>
                                 <li><a href="/index.html?kinhte&marketing">Marketing</a></li>
@@ -68,7 +68,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/index.html">Tâm lý/Kỹ năng sống <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html?tamly/kynangsong">Tâm lý/Kỹ năng sống <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook5">
                                 <li><a href="/index.html?tamly/kynangsong&tamly">Tâm lý</a></li>
                                 <li><a href="/index.html?tamly/kynangsong&kynangsong">Kỹ năng sống</a></li>
@@ -76,14 +76,14 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/index.html">Lịch sử <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html?lichsu">Lịch sử <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook6">
                                 <li><a href="/index.html?lichsu&vietnam">Việt Nam</a></li>
                                 <li><a href="/index.html?lichsu&nuocngoai">Nước ngoài</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="/index.html">Thiếu nhi <i class="fas fa-solid fa-caret-down"></i></a>
+                            <a href="/index.html?thieunhi">Thiếu nhi <i class="fas fa-solid fa-caret-down"></i></a>
                             <ul class="sub-topmenu" id="sub-topmenubook7">
                                 <li><a href="/index.html?thieunhi&truyenthieunhi">Truyện thiếu nhi</a></li>
                                 <li><a href="/index.html?thieunhi&tomau">Tô màu</a></li>
